# pyerg

./: .gitignore  CMakeLists.txt  Changelog.txt  FindNumPy.cmake  LICENSE  README.md  setup.py
erg/: CMakeLists.txt  erg.cpp  erg.h
pyerg/: CMakeLists.txt  pyerg.cpp  pyerg.h  pyerg_docstrings.h
test/: CMakeLists.txt  main.cpp  test_pyerg.py  test_pyerg_doc.py
